# encora_technical_test

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/api/: deps.py  errors.py  middleware.py
app/api/routers/: descriptions.py  feedback.py  images.py
app/core/: config.py  langsmith.py  logging.py
app/domain/chains/: descriptions_chain.py  feedback_chain.py  images_chain.py
app/domain/models/: descriptions.py  feedback.py  images.py  product.py
app/domain/prompts/: policy_guardrails.md  system_copywriter.md  system_insights.md  system_visual.md
app/domain/services/: descriptions_service.py  feedback_service.py  images_service.py
app/infra/: storage.py
app/infra/image_providers/: __init__.py  hf_inference.py  openai_dalle.py
app/tests/: test_descriptions.py  test_feedback.py  test_images.py
configs/: .env.example  brand_guidelines.json  channel_presets.json
deploy/: build-and-deploy.sh
docker/: Dockerfile.api  Dockerfile.frontend
frontend/: app.py
